# dscan

./: .gitignore  .metadata  README.md  pubspec.yaml  run.sh
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
example/: README.md  pubspec.yaml
example/android/app/: build.gradle.kts
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/example/dscan_example/: MainActivity.kt
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: edges_painer.dart  main.dart
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/macos/Runner/Configs/: AppInfo.xcconfig
ios/: dscan.podspec
lib/: dscan.dart
lib/src/rust/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
lib/src/rust/api/: scan.dart
macos/: dscan.podspec
macos/Classes/: dummy_file.cpp
rust/: Cargo.toml  build.rs
rust/src/: frb_generated.rs
rust/src/api/: scan.rs
scripts/: setup_opencv.sh
