[package]
name = "dscan"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
anyhow = "1.0.102"
flutter_rust_bridge = "=2.11.1"
opencv = { version = "0.98.2", default-features = false, features = ["imgproc", "imgcodecs", "clang-runtime"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
